[package]
name = "Proscylstius"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.15.0" # Gives us egui, epi and web+native backends
serde = { version = "1", features = ["derive"], optional = true }
rand = "0.8.0"

[features]
default = []
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown

[profile.release]
opt-level = 2 # fast and small wasm
